fix small package
